@@ -1,0 +1,8 @@
+{
+  "variants": {
+    "facing=south": { "model": "dwm:block/roundel/iron_roundel" },
+    "facing=east": { "model": "dwm:block/roundel/iron_roundel", "y": 270 },
+    "facing=west": { "model": "dwm:block/roundel/iron_roundel", "y": 90 },
+    "facing=north": { "model": "dwm:block/roundel/iron_roundel", "y": 180 }
+  }
+}
