@@ -75,6 +75,15 @@
   "block.dwm.frosted_ice_roundel": "Frosted Ice Roundel",
   "block.dwm.blue_ice_roundel": "Blue Ice Roundel",
 
+  "block.dwm.netherrack_roundel": "Netherrack Roundel",
+  "block.dwm.netherbrick_roundel": "Nether Bricks Roundel",
+  "block.dwm.magma_roundel": "Magma Roundel",
+
+  "block.dwm.iron_roundel": "Iron Roundel",
+  "block.dwm.gold_roundel": "Gold Roundel",
+  "block.dwm.diamond_roundel": "Diamond Roundel",
+  "block.dwm.lapis_roundel": "Lapis Lazuli Roundel",
+
   "block.dwm.hartnell_roundel": "Hartnell Roundel",
   "block.dwm.hartnell_roundel_split": "Hartnell Roundel",
 
