@@ -1,0 +1,3 @@
+{
+  "parent": "dwm:block/roundel/iron_roundel"
+}
